fixed background and foreground colors that do not have a sufficient contrast ratio.

--- a/style.css
+++ b/style.css
@@ -362,6 +362,11 @@ a:hover {
     z-index: 2;
 }
 
+quote
+{
+    color: #000000;
+}
+
 quote span
 { 
   font-weight: bold;
@@ -789,17 +794,17 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #ffffff!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .ltc-white {
